# ASI-T2

./: .gitignore  .pre-commit-config.yaml  CHARTER.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  FEDERATION_QUICKSTART.md  FILENAME_POLICY_QUICKREF.md  FILENAME_POLICY_SUMMARY.md  GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  MASTER_PLAN_STRUCTURE.md  QUICK_REFERENCE.md  README-PAGES.md  README.md  RELEASE.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  UTCS_IMPLEMENTATION_SUMMARY.md  ata_conflicts.csv  ata_dedup_summary.md  domains.json  link_fixups.csv  pages.manifest.yaml  pyproject.toml  requirements.txt  verify_installation.py
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
2-DOMAINS-LEVELS/: README.md
AIRPORT_H2_LH2/: README.md
ASI-T2/: README.md
CSDB/: ISSUE_6.0_SUMMARY.md  QUICK_REFERENCE.md  README.md
DIMENSIONS/: README.md
ENVIRONMENTS/: README.md
FIELDS/: README.md
FINANCE/: PRINCIPLES.md  README.md
HALL-OF-RECORDS/: CLAIM.md  README.md
INFRA/: README.md
LICENSES/: CODE_LICENSE.txt  DOCS_LICENSE.txt  HARDWARE_LICENSE.txt  MODELS_LICENSE.txt  README.md
MAL/: README.md
PRODUCTS/: README.md
Supplier/: README.md
UTCS/: README.md  context.manifest.json  context.schema.json  links.map.json
UTCS_BUNDLE/: README.md  manifest.utcs.yaml
Vendors/: README.md
WHITEPAPERS/: ASI_Architecture.puml  ASI_Assurance_KPIs.csv  ASI_Autonomy_Boundaries.md  ASI_Constitution.yaml  ASI_GSN_Safety_Case.gsn  ASI_Policy.rego  ASI_Threat_Register.csv  INTEGRATION_GUIDE.md  INTEGRATION_WHITEPAPER_2.md  MASTER_WHITEPAPER_0.md  MASTER_WHITEPAPER_1.md  MASTER_WHITEPAPER_2.md  MASTER_WHITEPAPER_2_MAL.md  MASTER_WHITEPAPER_3.md  MASTER_WHITEPAPER_3_UTCS.md  MASTER_WHITEPAPER_4.md  MASTER_WHITEPAPER_5_BWB_CERTIFICATION.md  OPTIME_MARK.md  README.md  whitepaper_0_TRUE_GENESIS-ASI.md
_site/: index.html
docs/: ARCHITECTURE.md  GENESIS.md  INTERFACES.md  README.md  TOKENS.md
finance/: PRINCIPLES.md  README.md  SPONSORSHIP.md  teknia.tokenomics.json  teknia.tokenomics.nofee.json
governance/: CODEOWNERS  GOVERNANCE.md  SECURITY.md
policies/: DATA_CLASSIFICATION.md  EXPORT_CONTROL.md  PRIVACY.md  README.md  SECURITY.md
reports/: ata_renames.csv  (+7 more)
(+2456 files in other folders)
